# freeacq

./: ChangeLog  Makefile.am  README  autogen.sh  configure.ac
docs/reference/: Makefile.am
docs/reference/freeacq/: Makefile.am
mingw/: Makefile.am  capture.rc  nsisconstructor.sh  oscope.rc  plethysmograph.rc  setup.nsi  viewer.rc
po/: Makevars  POTFILES.in  en.po  es.po
src/: Makefile.am  facqbafview.c  facqbafview.h  facqbafviewdialog.c  facqbafviewdialog.h  facqbafviewmenu.c  facqbafviewmenu.h  facqbafviewmenucallbacks.c  facqbafviewmenucallbacks.h  facqbafviewplot.c  facqbafviewplot.h  facqbafviewtoolbar.c  facqbafviewtoolbar.h  facqbafviewtoolbarcallbacks.c  facqbafviewtoolbarcallbacks.h  facqbpm.c  facqbpm.h  facqbuffer.c  facqbuffer.h  facqcapture.c  facqcapture.h  facqcapturemain.c  facqcapturemenu.c  facqcapturemenu.h  facqcapturemenucallbacks.c  facqcapturemenucallbacks.h  facqcapturetoolbar.c  facqcapturetoolbar.h  facqcapturetoolbarcallbacks.c  facqcapturetoolbarcallbacks.h  facqcatalog.c  facqcatalog.h  facqcatalogdialog.c  facqcatalogdialog.h  facqchanlist.c  facqchanlist.h  facqchanlisteditor.c  facqchanlisteditor.h  facqchunk.c  facqchunk.h  (+116 more)
